--- a/gp_page3.html
+++ b/gp_page3.html
@@ -7,14 +7,18 @@
           Case Problem 1
           
           Ghost of the Deep Page 3
-          Author: 
-          Date:   
+          Author: Ryan C Burkhart
+          Date: 11/28/18   
       
           Filename: gp_page3.html
          -->
    
    <title>Ghost of the Deep Page 3</title>
    <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="gp_reset.css" media"all"/>
+   <link rel="stylesheet" href="gp_layout.css" media"all" />
+   <link rel="stylesheet" href="gp_print.css" media"all" />
    </head>
 
 <body>
