--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <link rel="stylesheet" href="gp_layout.css" media="screen" />
    <link rel="stylesheet" href="gp_print.css" media="print" />
 </head>
-
+<!-- Added all the links -->
 <body>
    <header>
       <img src="gp_logo.png" alt="Golden Pulp" />
