--- a/gp_page3.html
+++ b/gp_page3.html
@@ -17,8 +17,8 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="gp_reset.css" media"all"/>
-   <link rel="stylesheet" href="gp_layout.css" media"all" />
-   <link rel="stylesheet" href="gp_print.css" media"all" />
+   <link rel="stylesheet" href="gp_layout.css" media"sheet" />
+   <link rel="stylesheet" href="gp_print.css" media"print" />
    </head>
 
 <body>
